package edu.fiuba.algo3.modelo.cartasDeDesarrollo;

import edu.fiuba.algo3.modelo.juego.Juego;
import edu.fiuba.algo3.modelo.jugador.Jugador;
import edu.fiuba.algo3.modelo.recursos.Recurso;

public class ProgresoMonopolio implements CartaDesarrollo {
    private Juego juego;
    private Recurso recursoDeseado;
    private Jugador jugadorActual;
    private boolean cartaHabilitada= false;

    public ProgresoMonopolio(){}

    public ProgresoMonopolio(Juego juego, Recurso recursoDeseado, Jugador jugadorActual) {
        this.juego = juego;
        this.recursoDeseado = recursoDeseado;
        this.jugadorActual = jugadorActual;
    }

    @Override
    public void ejecutarAlGuardar(Jugador jugador) {}

    @Override
    public void ejecutar() {
        juego.entregarAJugador(recursoDeseado);
        jugadorActual.eliminarCarta(new ProgresoMonopolio());
    }

    public String getCarta(){
        return "Progreso Monopolio";
    }

    @Override
    public void habilitarCarta() {
        this.cartaHabilitada = true;

    }

    @Override
    public boolean getHabilitacion() {
        return cartaHabilitada;
    }

    @Override
    public boolean coincideCon(CartaDesarrollo cartaAComparar) {
        return cartaAComparar.coincideConProgresoMonopolio();
    }

    @Override
    public boolean coincideConCaballero() {
        return false;
    }

    @Override
    public boolean coincideConProgresoConstruccion() {
        return false;
    }

    @Override
    public boolean coincideConProgresoDescubrimiento() {
        return false;
    }

    @Override
    public boolean coincideConProgresoMonopolio() {
        return true;
    }

    @Override
    public boolean coincideConPuntoVictoria() {
        return false;
    }
}
